--- a/examle/index.html
+++ b/examle/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 <div class="text">
+Для работы необходимо подключить библиотеку jquery!!!
+</div>
+<div class="text">
 Первая ничем не примечательная. Обычная картинка у которой заданы свойства src и alt
 </div>
 <img src="4.jpg"  alt = "test">
