--- a/examle/index.html
+++ b/examle/index.html
@@ -18,7 +18,7 @@
 <div class="text">
 Подключим Милениатюры с помощью атрибута 'myleneature'... Теперь кликните на изображение.
 </div>
-<img src="bg.jpg" myleneature alt = "test">
+<img src="2.jpg" myleneature alt = "test">
 <div class="text">
 Сделаем так, что бы в открывшемся блоке было другое изображение (полезно, для производительности, если на основной странице будет сжатое превью, а в Миленеатюрах полное изображение. Для этого добавьте атрибут full и адрес другого изображения.
 </div>
