--- a/examle/index.html
+++ b/examle/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
 <div class="text">
+Для начала работы к документу необходимо подключить jQuery, Myleneature.css и Myleneature.js (Myleneature.js - настоятельно рекомендуется подключать в конце документа).
+</div>
+<div class="text">
 Первая ничем не примечательная. Обычная картинка у которой заданы свойства src и alt
 </div>
 <img src="4.jpg"  alt = "test">
@@ -27,6 +30,7 @@
 Что бы отключить скролл во время просмотра Миленеатюры, добавьте атрибут 'hidescroll'
 </div>
 <img src="4.jpg" hidescroll myleneature alt = "test">
+<div style="height: 250px;"></div>
 <script src="../script/Myleneature.js"></script>
 </body>
 </html>
