--- a/examle/index.html
+++ b/examle/index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../script/Myleneature.css">
 	<script src="https://code.jquery.com/jquery.js"></script>
-	  
+	 <script src="../script/Myleneature.js"></script>
 </head>
 <body>
 <div class="text">
-Для начала работы к документу необходимо подключить jQuery, Myleneature.css и Myleneature.js (Myleneature.js - настоятельно рекомендуется подключать в конце документа).
+Для начала работы к документу необходимо подключить jQuery, Myleneature.css и Myleneature.js.
 </div>
 <div class="text">
 Первая ничем не примечательная. Обычная картинка у которой заданы свойства src и alt
@@ -31,6 +31,5 @@
 </div>
 <img src="4.jpg" hidescroll myleneature alt = "test">
 <div style="height: 250px;"></div>
-<script src="../script/Myleneature.js"></script>
 </body>
 </html>
